--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: php
+
+before_install:
+  - php /home/travis/.phpenv/versions/5.3.26/bin/composer.phar self-update
+
 php:
   - "5.5"
   - "5.4"
