--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: php
 
 before_install:
+	- php /home/travis/.phpenv/versions/5.5.0/bin/composer.phar self-update
+	- php /home/travis/.phpenv/versions/5.4.16/bin/composer.phar self-update
   - php /home/travis/.phpenv/versions/5.3.26/bin/composer.phar self-update
 
 php:
