--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: php
 
 before_install:
- - composer install
+ - php /home/travis/.phpenv/versions/5.3.26/bin/composer.phar self-update
 
 php:
- - "5.5"
- - "5.4"
  - "5.3"
