--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,8 @@ before_install:
  - php /home/travis/.phpenv/versions/5.3.26/bin/composer.phar self-update
 
 php:
- - "5.3"
+ - 5.3
+ - 5.4
+ - 5.5
+
+script: ./vendor/bin/phpunit
