--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: php
 
+before_script:
+ - pear channel-discover pear.phpunit.de
+ - pear install phpunit/PHP_Invoker
+ - pear install phpunit/DbUnit
+ - pear install phpunit/PHPUnit_Selenium
+ - pear install phpunit/PHPUnit_Story
+
 php:
   - 5.2
   - 5.3
