--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,19 @@ language: php
 
 php:
  - 5.3
-# - 5.4
-# - 5.5
+ - 5.4
+ - 5.5
 
 before_script:
  - curl -s http://getcomposer.org/installer | php
  - php composer.phar install
+ - pear channel-discover pear.php-tools.net
+ - pear install pat/vfsStream-beta
 # - pear channel-discover pear.phpunit.de
 # - pear install phpunit/PHP_Invoker
 # - pear install phpunit/DbUnit
 # - pear install phpunit/PHPUnit_Selenium
 # - pear install phpunit/PHPUnit_Story
 
-script: phpunit
-#script: phpunit --coverage-text
+#script: phpunit
+script: phpunit --coverage-text
