--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"required": {
-		"php": ">=5.3.2"
+		"php": ">=5.3.2",
+		"mikey179/vfsStream": "1.2.0"
 	},
 	"required-dev": {
 		"phpunit/phpunit": "3.7.x-dev"
